use google stun

--- a/public/viewer.html
+++ b/public/viewer.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <h1>Viewer</h1>
-    <!-- <video autoplay id='video'></video> -->
-    <video autoplay muted id="video"></video>
+    <video  autoplay id="video"></video>
 
     <button id="my-button">View Stream</button>
 </body>
